# cbers_processing

./: README.md  comandos.txt  compare_pan_ps4.py  compose.gpu.yaml  compose.yaml
bkp_codigos_cbers/: comando gerar imagem final.txt  infer_geotiff_color.py  infer_geotiff_sr.py  script_quantis.py
bkp_colorization7/cbers-colorization/: documentation.html  passo_a_passo_instalando_codigo_fonte.txt  passo_a_passo_instalando_imagens.txt  pyproject.toml  requirements.txt  run_auto.ps1
bkp_colorization7/cbers-colorization/cbers_colorize/: cli.py  ops_color.py  ops_gdal.py  pipeline.py  progress.py
bkp_colorization7/cbers-colorization/cbers_colorize/rsinet/: net.py
bkp_colorization7/cbers-colorization/cbers_colorize/tools/: infer_geotiff_color.py
bkp_colorization7/cbers-colorization/docker/: Dockerfile
cbers_colorize/: __init__.py  cli.py  ops_color.py  ops_gdal.py  pipeline.py  progress.py
cbers_colorize/rsinet/: __init__.py  net.py  net_common.py
cbers_colorize/tools/: infer_geotiff_color.py
cbers_colorize/tools/sr/: infer_geotiff_sr.py  postprocess_sr_raw.py  test_rsinet_x4_load.py
cbers_colorize_qgis/: README_plugin.md  __init__.py  cbers_colorize_plugin.py  metadata.txt  resources.py  resources.qrc
cbers_colorize_qgis/core/: docker_runner.py  log_parser.py  presets.py  worker.py
cbers_colorize_qgis/ui/: cbers_colorize_dialog.py
docker/: entrypoint.sh
